; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/cocoa/extr_vidgcd.c_PopUserClipping.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/cocoa/extr_vidgcd.c_PopUserClipping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32 }

@Vdp1Regs = common dso_local global %struct.TYPE_2__* null, align 8
@vdp1clipxstart = common dso_local global i32 0, align 4
@vdp1clipxend = common dso_local global i32 0, align 4
@vdp1clipystart = common dso_local global i32 0, align 4
@vdp1clipyend = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @PopUserClipping to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PopUserClipping() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %2 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 3
  %3 = load i32, i32* %2, align 4
  store i32 %3, i32* @vdp1clipxstart, align 4
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* @vdp1clipxend, align 4
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* @vdp1clipystart, align 4
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* @vdp1clipyend, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
